--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -7,29 +7,11 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Outfit">
+  <link rel="stylesheet" href="css/styles.css">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-
-    body{
-      background-color: ;
-    }
-    .wrapper{
-
-    }
-
-  </style>
 </head>
 
 <body>
